--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "react": "^17.0.2",
+    "react-redux": "^7.2.6",
+    "react-icons": "^4.3.1",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
+    "redux-toolkit": "^1.1.2",
     "styled-components": "^5.3.3",
     "web-vitals": "^2.1.4"
   },
@@ -39,7 +42,11 @@
   "devDependencies": {
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-prettier": "^4.0.0",
-    "prettier": "2.6.0"
+    "eslint-plugin-react": "^7.29.3",
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "prettier": "^2.5.1"
   }
 }
